Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-8510

[C++] arrow/dataset/file_base.cc fails to compile with internal compiler error with "Visual Studio 15 2017 Win64" generator

    XMLWordPrintableJSON

Details

    Description

      I discovered this while running the release verification on Windows. There was an obscuring issue which is that if the build fails, the verification script continues. I will fix that

      Attachments

        Issue Links

          Activity

            People

              wesm Wes McKinney
              wesm Wes McKinney
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 50m
                  50m