ARROW-8510: [C++][Datasets] Do not use variant in WritePlan to fix compiler error with VS 2017

Even without the compiler error on VS 2017 I am not a fan of using variant to solve problems like these (so to me this new code is strictly preferable to the old code), nor exposing a variant in public (or "public") APIs unless it is definitely needed.

Closes #7419 from wesm/ARROW-8510

Authored-by: Wes McKinney <wesm@apache.org>
Signed-off-by: Wes McKinney <wesm@apache.org>